pl10_30abr/y.output
Grammar

    0 $accept: prog $end

    1 prog: decls insts

    2 decls: decls VAR ID ':' tipo ';'
    3      | %empty

    4 insts: insts inst
    5      | %empty

    6 inst: ID '=' exp ';'
    7     | PRINT exp ';'

    8 exp: exp '+' parc
    9    | parc

   10 parc: ID
   11     | NUM

   12 tipo: INT


Terminals, with rules where they appear

$end (0) 0
'+' (43) 8
':' (58) 2
';' (59) 2 6 7
'=' (61) 6
error (256)
NUM (258) 11
VAR (259) 2
PRINT (260) 7
INT (261) 12
ID (262) 2 6 10


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
prog (13)
    on left: 1, on right: 0
decls (14)
    on left: 2 3, on right: 1 2
insts (15)
    on left: 4 5, on right: 1 4
inst (16)
    on left: 6 7, on right: 4
exp (17)
    on left: 8 9, on right: 6 7 8
parc (18)
    on left: 10 11, on right: 8 9
tipo (19)
    on left: 12, on right: 2


State 0

    0 $accept: . prog $end

    $default  reduce using rule 3 (decls)

    prog   go to state 1
    decls  go to state 2


State 1

    0 $accept: prog . $end

    $end  shift, and go to state 3


State 2

    1 prog: decls . insts
    2 decls: decls . VAR ID ':' tipo ';'

    VAR  shift, and go to state 4

    $default  reduce using rule 5 (insts)

    insts  go to state 5


State 3

    0 $accept: prog $end .

    $default  accept


State 4

    2 decls: decls VAR . ID ':' tipo ';'

    ID  shift, and go to state 6


State 5

    1 prog: decls insts .
    4 insts: insts . inst

    PRINT  shift, and go to state 7
    ID     shift, and go to state 8

    $default  reduce using rule 1 (prog)

    inst  go to state 9


State 6

    2 decls: decls VAR ID . ':' tipo ';'

    ':'  shift, and go to state 10


State 7

    7 inst: PRINT . exp ';'

    NUM  shift, and go to state 11
    ID   shift, and go to state 12

    exp   go to state 13
    parc  go to state 14


State 8

    6 inst: ID . '=' exp ';'

    '='  shift, and go to state 15


State 9

    4 insts: insts inst .

    $default  reduce using rule 4 (insts)


State 10

    2 decls: decls VAR ID ':' . tipo ';'

    INT  shift, and go to state 16

    tipo  go to state 17


State 11

   11 parc: NUM .

    $default  reduce using rule 11 (parc)


State 12

   10 parc: ID .

    $default  reduce using rule 10 (parc)


State 13

    7 inst: PRINT exp . ';'
    8 exp: exp . '+' parc

    ';'  shift, and go to state 18
    '+'  shift, and go to state 19


State 14

    9 exp: parc .

    $default  reduce using rule 9 (exp)


State 15

    6 inst: ID '=' . exp ';'

    NUM  shift, and go to state 11
    ID   shift, and go to state 12

    exp   go to state 20
    parc  go to state 14


State 16

   12 tipo: INT .

    $default  reduce using rule 12 (tipo)


State 17

    2 decls: decls VAR ID ':' tipo . ';'

    ';'  shift, and go to state 21


State 18

    7 inst: PRINT exp ';' .

    $default  reduce using rule 7 (inst)


State 19

    8 exp: exp '+' . parc

    NUM  shift, and go to state 11
    ID   shift, and go to state 12

    parc  go to state 22


State 20

    6 inst: ID '=' exp . ';'
    8 exp: exp . '+' parc

    ';'  shift, and go to state 23
    '+'  shift, and go to state 19


State 21

    2 decls: decls VAR ID ':' tipo ';' .

    $default  reduce using rule 2 (decls)


State 22

    8 exp: exp '+' parc .

    $default  reduce using rule 8 (exp)


State 23

    6 inst: ID '=' exp ';' .

    $default  reduce using rule 6 (inst)
